sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: Boolean does not take parameters
      if (plusPetit(i+ecart, i)) echange (i, i+ecart); echange=true
                                         ^